code/python/SPAREngine/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Style Performance and Risk Analysis (SPAR) Engine client library for Python

[![API Version](https://img.shields.io/badge/api-v3.16.2-blue)](https://developer.factset.com/api-catalog/spar-engine-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.SPAREngine/3.0.0)](https://pypi.org/project/fds.sdk.SPAREngine/v/3.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.16.2
- SDK version: 3.0.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.protobuf.stach.extensions fds.sdk.SPAREngine==3.0.0
```

### pip

```shell
pip install fds.sdk.utils fds.protobuf.stach.extensions fds.sdk.SPAREngine==3.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.SPAREngine
from fds.sdk.SPAREngine.api import accounts_api
from fds.sdk.SPAREngine.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.SPAREngine.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.SPAREngine.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.SPAREngine.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = accounts_api.AccountsApi(api_client)
    path = "Client:" # str | The directory to get the accounts and sub-directories.

    try:
        # Get accounts and sub-directories in a directory
        # example passing only required values which don't have defaults set
        api_response = api_instance.get_accounts(path)

        pprint(api_response)
    except fds.sdk.SPAREngine.ApiException as e:
        print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get accounts and sub-directories in a directory
    #     api_response, http_status_code, response_headers = api_instance.get_accounts_with_http_info(path)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.SPAREngine.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get accounts and sub-directories in a directory
    #     async_result = api_instance.get_accounts_async(path)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.SPAREngine.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get accounts and sub-directories in a directory
    #     async_result = api_instance.get_accounts_with_http_info_async(path)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.SPAREngine.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.SPAREngine

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.SPAREngine.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.SPAREngine

configuration = fds.sdk.SPAREngine.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.SPAREngine

configuration = fds.sdk.SPAREngine.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.SPAREngine

configuration = fds.sdk.SPAREngine.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## STACH extensions

Some methods within this client library are able to return STACH formatted data. Please see the documentation of those endpoints on how to enable and use STACH formatted data.

Documentation of the STACH extension can be found here: [stach-extensions](https://github.com/factset/stach-extensions) and here [STACH schema](https://factset.github.io/stachschema)

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**get_accounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/AccountsApi.md#get_accounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*AccountsApi* | [**get_spar_returns_type**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/AccountsApi.md#get_spar_returns_type) | **GET** /analytics/engines/spar/v3/accounts/{accountPath}/returns-type | Get SPAR account returns type details
*BenchmarksApi* | [**get_spar_benchmark_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/BenchmarksApi.md#get_spar_benchmark_by_id) | **GET** /analytics/engines/spar/v3/benchmarks | Get SPAR benchmark details
*ComponentsApi* | [**get_spar_component_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ComponentsApi.md#get_spar_component_by_id) | **GET** /analytics/engines/spar/v3/components/{id} | Get SPAR component by id
*ComponentsApi* | [**get_spar_components**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ComponentsApi.md#get_spar_components) | **GET** /analytics/engines/spar/v3/components | Get SPAR components
*CurrenciesApi* | [**get_currencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CurrenciesApi.md#get_currencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*DocumentsApi* | [**get_spar3_documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/DocumentsApi.md#get_spar3_documents) | **GET** /analytics/engines/spar/v3/documents/{path} | Gets SPAR3 documents and sub-directories in a directory
*FrequenciesApi* | [**get_spar_frequencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/FrequenciesApi.md#get_spar_frequencies) | **GET** /analytics/engines/spar/v3/frequencies | Get SPAR frequencies
*SPARCalculationsApi* | [**cancel_calculation_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationsApi.md#cancel_calculation_by_id) | **DELETE** /analytics/engines/spar/v3/calculations/{id} | Cancel SPAR calculation
*SPARCalculationsApi* | [**get_all_calculations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationsApi.md#get_all_calculations) | **GET** /analytics/engines/spar/v3/calculations | Get all calculations
*SPARCalculationsApi* | [**get_calculation_parameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationsApi.md#get_calculation_parameters) | **GET** /analytics/engines/spar/v3/calculations/{id} | Get SPAR calculation parameters by id
*SPARCalculationsApi* | [**get_calculation_status_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationsApi.md#get_calculation_status_by_id) | **GET** /analytics/engines/spar/v3/calculations/{id}/status | Get SPAR calculation status by id
*SPARCalculationsApi* | [**get_calculation_unit_result_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationsApi.md#get_calculation_unit_result_by_id) | **GET** /analytics/engines/spar/v3/calculations/{id}/units/{unitId}/result | Get SPAR calculation result by id
*SPARCalculationsApi* | [**post_and_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationsApi.md#post_and_calculate) | **POST** /analytics/engines/spar/v3/calculations | Create and Run SPAR calculation
*SPARCalculationsApi* | [**put_and_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationsApi.md#put_and_calculate) | **PUT** /analytics/engines/spar/v3/calculations/{id} | Create or Update SPAR calculation and run it.
*SPARPeerUniverseApi* | [**get_list_of_peer_universe**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARPeerUniverseApi.md#get_list_of_peer_universe) | **GET** /analytics/engines/spar/v3/peer-universe | Get List of Peer Universe


## Documentation For Models

 - [AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/AccountDirectories.md)
 - [AccountDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/AccountDirectoriesRoot.md)
 - [CalculationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationMeta.md)
 - [CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationStatus.md)
 - [CalculationStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationStatusMeta.md)
 - [CalculationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationStatusRoot.md)
 - [CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationUnitStatus.md)
 - [CalculationUnitStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationUnitStatusMeta.md)
 - [CalculationsSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationsSummary.md)
 - [CalculationsSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CalculationsSummaryRoot.md)
 - [ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ClientErrorResponse.md)
 - [ComponentSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ComponentSummary.md)
 - [ComponentSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ComponentSummaryRoot.md)
 - [Currency](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/Currency.md)
 - [CurrencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/CurrencyRoot.md)
 - [DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/DocumentDirectories.md)
 - [DocumentDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/DocumentDirectoriesRoot.md)
 - [Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/Error.md)
 - [ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ErrorSource.md)
 - [Frequency](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/Frequency.md)
 - [FrequencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/FrequencyRoot.md)
 - [ObjectRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ObjectRoot.md)
 - [PaginationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/PaginationInfo.md)
 - [PaginationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/PaginationMeta.md)
 - [ReturnType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/ReturnType.md)
 - [SPARAccounts](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARAccounts.md)
 - [SPARAccountsRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARAccountsRoot.md)
 - [SPARBenchmark](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARBenchmark.md)
 - [SPARBenchmarkRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARBenchmarkRoot.md)
 - [SPARCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationParameters.md)
 - [SPARCalculationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARCalculationParametersRoot.md)
 - [SPARComponent](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARComponent.md)
 - [SPARComponentIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARComponentIdentifier.md)
 - [SPARComponentRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARComponentRoot.md)
 - [SPARDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARDateParameters.md)
 - [SPARIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARIdentifier.md)
 - [SPARPeerUniverseListResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARPeerUniverseListResponse.md)
 - [SPARPeerUniverseResponseItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARPeerUniverseResponseItem.md)
 - [SPARPeerUniverseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SPAREngine/v3/docs/SPARPeerUniverseRoot.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.SPAREngine.apis and fds.sdk.SPAREngine.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.SPAREngine.api.default_api import DefaultApi`
- `from fds.sdk.SPAREngine.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.SPAREngine
from fds.sdk.SPAREngine.apis import *
from fds.sdk.SPAREngine.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

